--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
     "@iconify-json/carbon": "^1.1.36",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
+    "@tiptap/vue-3": "^2.4.0",
     "@types/node": "^20.14.8",
     "@unocss/eslint-plugin": "^0.61.0",
     "@unocss/reset": "^0.61.0",
