--- a/package.json
+++ b/package.json
@@ -18,37 +18,52 @@
     "up": "taze major -I"
   },
   "dependencies": {
-    "@arco-design/web-vue": "2.54.3",
+    "@arco-design/web-vue": "^2.55.3",
     "@vueuse/core": "^10.11.0",
-    "vue": "^3.4.30",
+    "vue": "^3.4.31",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.1",
+    "@antfu/eslint-config": "^2.22.0",
     "@iconify-json/carbon": "^1.1.36",
+    "@tiptap/extension-blockquote": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-dropcursor": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
     "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-history": "^2.4.0",
+    "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-text-align": "^2.4.0",
     "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/vue-3": "^2.4.0",
-    "@types/node": "^20.14.8",
-    "@unocss/eslint-plugin": "^0.61.0",
-    "@unocss/reset": "^0.61.0",
+    "@types/node": "^20.14.10",
+    "@unocss/eslint-plugin": "^0.61.3",
+    "@unocss/reset": "^0.61.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-plugin-format": "^0.1.2",
-    "pnpm": "^9.4.0",
-    "taze": "^0.13.8",
-    "typescript": "^5.5.2",
-    "unocss": "^0.61.0",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
+    "pnpm": "^9.5.0",
+    "taze": "^0.14.2",
+    "typescript": "^5.5.3",
+    "unocss": "^0.61.3",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.2",
     "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22"
+    "vite": "^5.3.3",
+    "vue-tsc": "^2.0.26"
   },
   "lint-staged": {
     "*": "eslint --fix"
