--- a/package.json
+++ b/package.json
@@ -14,56 +14,55 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint src --fix",
-    "preview": "vite preview",
-    "up": "taze major -I"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@arco-design/web-vue": "^2.55.3",
+    "@arco-design/web-vue": "^2.56.0",
     "@vueuse/core": "^10.11.0",
-    "vue": "^3.4.31",
+    "vue": "^3.4.34",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.22.0",
+    "@antfu/eslint-config": "^2.24.0",
     "@iconify-json/carbon": "^1.1.36",
-    "@tiptap/extension-blockquote": "^2.4.0",
-    "@tiptap/extension-bold": "^2.4.0",
-    "@tiptap/extension-bullet-list": "^2.4.0",
-    "@tiptap/extension-color": "^2.4.0",
-    "@tiptap/extension-document": "^2.4.0",
-    "@tiptap/extension-dropcursor": "^2.4.0",
-    "@tiptap/extension-heading": "^2.4.0",
-    "@tiptap/extension-highlight": "^2.4.0",
-    "@tiptap/extension-history": "^2.4.0",
-    "@tiptap/extension-image": "^2.4.0",
-    "@tiptap/extension-italic": "^2.4.0",
-    "@tiptap/extension-list-item": "^2.4.0",
-    "@tiptap/extension-ordered-list": "^2.4.0",
-    "@tiptap/extension-paragraph": "^2.4.0",
-    "@tiptap/extension-placeholder": "^2.4.0",
-    "@tiptap/extension-strike": "^2.4.0",
-    "@tiptap/extension-text": "^2.4.0",
-    "@tiptap/extension-text-align": "^2.4.0",
-    "@tiptap/extension-text-style": "^2.4.0",
-    "@tiptap/extension-underline": "^2.4.0",
-    "@tiptap/pm": "^2.4.0",
-    "@tiptap/vue-3": "^2.4.0",
-    "@types/node": "^20.14.10",
-    "@unocss/eslint-plugin": "^0.61.3",
-    "@unocss/reset": "^0.61.3",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@tiptap/core": "^2.5.7",
+    "@tiptap/extension-blockquote": "^2.5.7",
+    "@tiptap/extension-bold": "^2.5.7",
+    "@tiptap/extension-bullet-list": "^2.5.7",
+    "@tiptap/extension-color": "^2.5.7",
+    "@tiptap/extension-document": "^2.5.7",
+    "@tiptap/extension-dropcursor": "^2.5.7",
+    "@tiptap/extension-heading": "^2.5.7",
+    "@tiptap/extension-highlight": "^2.5.7",
+    "@tiptap/extension-history": "^2.5.7",
+    "@tiptap/extension-image": "^2.5.7",
+    "@tiptap/extension-italic": "^2.5.7",
+    "@tiptap/extension-list-item": "^2.5.7",
+    "@tiptap/extension-ordered-list": "^2.5.7",
+    "@tiptap/extension-paragraph": "^2.5.7",
+    "@tiptap/extension-placeholder": "^2.5.7",
+    "@tiptap/extension-strike": "^2.5.7",
+    "@tiptap/extension-text": "^2.5.7",
+    "@tiptap/extension-text-align": "^2.5.7",
+    "@tiptap/extension-text-style": "^2.5.7",
+    "@tiptap/extension-underline": "^2.5.7",
+    "@tiptap/pm": "^2.5.7",
+    "@tiptap/vue-3": "^2.5.7",
+    "@types/node": "^20.14.13",
+    "@unocss/eslint-plugin": "^0.61.7",
+    "@unocss/reset": "^0.61.7",
+    "@vitejs/plugin-vue": "^5.1.1",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "eslint": "^9.7.0",
+    "eslint": "^9.8.0",
     "eslint-plugin-format": "^0.1.2",
-    "pnpm": "^9.5.0",
-    "taze": "^0.14.2",
-    "typescript": "^5.5.3",
-    "unocss": "^0.61.3",
-    "unplugin-auto-import": "^0.18.0",
-    "unplugin-vue-components": "^0.27.2",
-    "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.3.3",
-    "vue-tsc": "^2.0.26"
+    "pnpm": "^9.6.0",
+    "typescript": "^5.5.4",
+    "unocss": "^0.61.7",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.3",
+    "unplugin-vue-router": "^0.10.1",
+    "vite": "^5.3.5",
+    "vue-tsc": "^2.0.29"
   },
   "lint-staged": {
     "*": "eslint --fix"
